--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=kotlin_example
+
+# Taxi Fare Configuration
+taxi.baseFare=3000
+taxi.perKmFare=1000
+taxi.nightSurcharge=1.5
